--- a/src/media/css/main.css
+++ b/src/media/css/main.css
@@ -1,4 +1,4 @@
-body {background-color:#f2f0dc;}
+body {background-color:#F4F2E0;}
 a {text-decoration:None;color:#5d5b46;}
 a:hover {color:#000;text-decoration:underline;}
 #hd {background: #212121 10px center no-repeat;margin-bottom:10px;}
