--- a/src/app1/templates/app1/base.html
+++ b/src/app1/templates/app1/base.html
@@ -61,8 +61,9 @@
 <div class="wrap_top">
 <h2>{% trans "TAGS" %}</h2>
 <ul class="wrap_list">
-{%for each in all_categories%}
-<li><a href="{{each.get_absolute_url}}" title="{{each.name|safe}}">{{each.name|safe}}</a></li>{%endfor%}
+{%for each in popular_tags%}
+<a href="{% url app1.views.tag_article each %}"  class = "size-{{ each.style }}" title="{{each|safe}}" >{{each|safe}}</a>
+{%endfor%}
 </ul>
 </div>
 
