--- a/src/app1/templates/app1/detail.html
+++ b/src/app1/templates/app1/detail.html
@@ -33,7 +33,8 @@
 <div id="contenct">
 {{obj.content|safe}}
 <p class="permalink">{% trans "Permalink" %} http://{{current_site.domain}}{{obj.short_url}}</p>
-<p>{% trans "Categories" %} <a href="{{obj.category.get_absolute_url}}" title="{{obj.category.name|safe}}">{{obj.category.name|safe}}</a> {%if obj.tags%}{% trans "Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag}}">{{tag}}</a>{% if not forloop.last %}, {% endif %}{%endfor%}{%endif%} {% trans "Author" %}: <a href="{{obj.profile.get_absolute_url}}" title="{{obj.profile.displayname|safe}} {% trans 'Profile' %}" rel="nofollow">{{obj.profile.displayname|safe}}</a> {% trans "Date" %} {{obj.pub_time|date:"d/m/Y"}}</p>
+<p>{% trans "Categories" %} <a href="{{obj.category.get_absolute_url}}" title="{{obj.category.name|safe}}">{{obj.category.name|safe}}</a> 
+{%if obj.tags%}{% trans "Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag}}">{{tag}}</a>{% if not forloop.last %}, {% endif %}{%endfor%}{%endif%} {% trans "Author" %}: <a href="{{obj.profile.get_absolute_url}}" title="{{obj.profile.displayname|safe}} {% trans 'Profile' %}" rel="nofollow">{{obj.profile.displayname|safe}}</a> {% trans "Date" %} {{obj.pub_time|date:"d/m/Y"}}</p>
 <ul> 
 	{% if obj.next %}<li>{% trans "Newer Post" %}: <a href="{{obj.next.get_absolute_url}}" title="{{obj.next.title}}">{{obj.next.title}}</a></li>{% endif %}
 	{% if obj.prev %}<li>{% trans "Older Post" %}: <a href="{{obj.prev.get_absolute_url}}" title="{{obj.prev.title}}">{{obj.prev.title}}</a></li>{% endif %}
