修改DIV与CSS中部分错误命名 完成footer修改

--- a/src/app1/templates/app1/add_article.html
+++ b/src/app1/templates/app1/add_article.html
@@ -44,7 +44,7 @@
 <div class="yui-g" id="articletop">
 <!-- YOUR DATA GOES HERE -->
 <h2>{% if obj %}{% trans "Edit" %}{% else %}{% trans "Add" %}{% endif %} {% trans "Article" %}</h2>
-<div id="contenct">
+<div id="content">
 
 <form action="" method="post" enctype="multipart/form-data" id="form1">
     {% if form.errors %}
