--- a/src/app1/templates/app1/show_profile.html
+++ b/src/app1/templates/app1/show_profile.html
@@ -7,7 +7,7 @@
 
 <div class="yui-g" id="articletop">
 <h2>{{obj.displayname|safe}} {% trans "Profile" %}</h2>
-<div id="contenct">
+<div id="content">
 <p style="float:left;">
 <img src="{{obj.gravatar_url}}" class="gravatar" alt="{{obj.name}}" height="120" width="120" /><br/>
 </p>
