--- a/src/app1/templates/app1/tip.html
+++ b/src/app1/templates/app1/tip.html
@@ -7,7 +7,7 @@
 
 <div class="yui-g" id="articletop">
 <h2>{% trans "Message" %}</h2>
-<div id="contenct">
+<div id="content">
 <div class="notice">{{tip|safe}}</div>
 </div>
 </div>
