--- a/src/app1/templates/app1/delete_article.html
+++ b/src/app1/templates/app1/delete_article.html
@@ -7,7 +7,7 @@
 
 <div class="yui-g" id="articletop">
 <h2>{% trans "Confirm Delete" %}</h2>
-<div id="contenct">
+<div id="content">
 <div class="notice">
 <form action="{{ request.path }}" method="post">
     <ul>
