1. 修改Google Jquery版本，升级至1.6.2 2. 将base.html加入block js，固定引入Jquery

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="/media/blueprintcss/forms.css" type="text/css" />
     <link rel="stylesheet" href="/media/css/main.css" type="text/css" />
     {% endblock %}
-    {% block js %}{% endblock %}
+    {% block js %}
+    <!-- Load jQuery -->
+	<script type="text/javascript" src="{%if g_blog.googlejquery%}{{g_blog.googlejquery|safe}}{%else%}/media/js/jquery.min.js{%endif%}"></script>
+    {% endblock %}
     {% block extra-head %}{% endblock %}    
 </head>
 <body>
