--- a/src/app1/templates/app1/index.html
+++ b/src/app1/templates/app1/index.html
@@ -1,5 +1,13 @@
 {% extends 'app1/base.html' %}
 {% load i18n %}
+
+{% block js %}
+<!-- Load jQuery -->
+<script type="text/javascript" src="{%if g_blog.googlejquery%}{{g_blog.googlejquery|safe}}{%else%}/media/js/jquery.min.js{%endif%}"></script>
+<script type="text/javascript" src="/media/js/slides.min.jquery.js"></script>
+
+{% endblock %}
+
 {% block subtitle %}{{ g_blog.title }}{% endblock %}
 
 {% block extra-head %}
