--- a/src/app1/templates/app1/index.html
+++ b/src/app1/templates/app1/index.html
@@ -45,7 +45,7 @@ $(function() {
     {%if ads_index_focus_slideshow%}{{ads_index_focus_slideshow|safe}}{%endif%}
     </div>
     <div class="yui-u cate">
-    <h2>{% trans "Recent posts" %} <A title="{% trans 'RSS Feed' %}" href="{% url app1.views.rsslatest%}" target="_blank"><IMG title="{% trans 'RSS Feed' %}" src="/media/images/rss.gif" alt="{% trans 'RSS Feed' %}"></A></h2>
+    <h2>{% trans "Recent Posts" %}<A title="{% trans 'RSS Feed' %}" href="{% url app1.views.rsslatest%}" target="_blank"><IMG title="{% trans 'RSS Feed' %}" src="/media/images/rss.gif" alt="{% trans 'RSS Feed' %}"></A></h2>
     <ul class="even">{%for each in newposts%}<li><a href="{{each.get_absolute_url}}" title="{{each.title}}">{{each.title}}</a></li>{%endfor%}
     </ul>
     </div>
